# Chess-Interface

./: .gitignore  Project4.sln
Project4/: CMakeLists.txt  Project4.vcxproj  Project4.vcxproj.filters  Source.cpp  Text.txt  board.cpp  board.h  chessGame.cpp  chessGame.h  piece.cpp  piece.h  pieceTexture.cpp  pieceTexture.h
Project4/subprocess/: Subprocess.h  child.cpp  parent.cpp  subproc_lib.h
